# arft

./: .gitignore  LICENSE  README.md  pyproject.toml
src/android_10_robust_file_transfer/: cli.py
src/arft/: __init__.py  __main__.py  cli.py
