[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arft"
version = "0.5.9"
description = "ARFT (Android Robust File Transfer): robust resumable Android file transfer over ADB with atomic operations, resuming, cached discovery and progress reporting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Stephen Karl Larroque", email = "lrq3000@gmail.com" }
]
dependencies = [
  "tqdm>=4.66"
]
keywords = ["adb", "android", "backup", "transfer", "tqdm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/lrq3000/arft"
Documentation = "https://github.com/lrq3000/arft/blob/master/README.rst"
"Source" = "https://github.com/lrq3000/arft"
Tracker = "https://github.com/lrq3000/arft/issues"
Download = "https://pypi.org/project/arft/"

[project.scripts]
arft = "arft.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
